# claude-code-agent-sdk

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  build.rs
examples/: 01_hello_world.rs  02_limit_tool_use.rs  03_monitor_tools.rs  04_permission_callbacks.rs  05_hooks_pretooluse.rs  06_bidirectional_client.rs  07_dynamic_control.rs  08_mcp_server_integration.rs  09_agents.rs  10_include_partial_messages.rs  11_setting_sources.rs  12_stderr_callback.rs  13_system_prompt.rs  14_streaming_mode.rs  15_hooks_comprehensive.rs  16_session_management.rs  17_fallback_model.rs  18_max_budget_usd.rs  19_max_thinking_tokens.rs  20_query_stream.rs  21_custom_plugins.rs  22_plugin_integration.rs  23_image_input.rs  24_efficiency_hooks.rs
examples-standalone/: README.md  tracing_basic.rs  tracing_opentelemetry.rs
scripts/: download_cli.sh  update_cli_version.sh
src/: client.rs  errors.rs  lib.rs  query.rs  version.rs
src/internal/: client.rs  message_parser.rs  mod.rs  query_full.rs  query_manager.rs
src/internal/transport/: mod.rs  ring_buffer.rs  subprocess.rs  trait_def.rs
src/types/: config.rs  efficiency.rs  hooks.rs  mcp.rs  messages.rs  plugin.rs
tests/: integration_tests.rs  real_fixtures_test.rs
