[package]
name = "claude-code-agent-sdk"
version = "0.1.25"
authors = ["soddygo <soddygo@qq.com>"]
edition = "2024"
rust-version = "1.90"
license = "MIT"
documentation = "https://docs.rs/claude-code-agent-sdk"
repository = "https://github.com/soddygo/claude-code-agent-sdk"
homepage = "https://github.com/soddygo/claude-code-agent-sdk"
description = "Rust SDK for Claude Code CLI with bidirectional streaming, hooks, custom tools, and plugin support"
readme = "README.md"
categories = ["development-tools", "api-bindings", "asynchronous"]
keywords = ["claude", "ai", "agent", "anthropic", "llm"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
# Async runtime
tokio = { version = "1.49", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "io-util",
  "sync",
  "time",
] }

# Async traits
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Path utilities
path-absolutize = "3.1"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1.19", features = ["v4"] }
typed-builder = "0.23.2"

# Macro utilities
paste = "1.0"

# Circular buffer for SDK transport
ringbuf = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"

[features]
default = []
